Fix 100vh on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,3 @@
-
-
-body {
-  color: black;
-  margin: 0;
-  white-space: nowrap;
-  padding: 0;
-  min-height: 100vh;
-}
-
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -20,11 +10,15 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
-
-
 body {
-  color: black;
-  margin: 0;
   min-height: 100vh;
+  min-height: fill-available;
+  min-height: -webkit-fill-available;
+  margin: 0;
+  padding: 0;
 }
 
+html {
+  height: fill-available;
+  height: -webkit-fill-available;
+}
